--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h2 id="main-title" class="title"></h2>
+  <h2 id="pw-text" class="title"></h2>
 
 
   <script src="js/script.js"></script>
