--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-  <h2 id="result"></h2>
+  <main>
+    <h2 id="result"></h2>
+  </main>
+  
 
 
   <script src="js/script.js"></script>
